rework some config handling and loading of JER